WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233557
[:has() pseudo-class] id invalidation support
https://bugs.webkit.org/show_bug.cgi?id=233557
Summary
[:has() pseudo-class] id invalidation support
Antti Koivisto
Reported
2021-11-29 07:08:04 PST
The current invalidation code doesn't automatically cover id mutations for has since it doesn't use rulesets.
Attachments
Patch
(18.42 KB, patch)
2021-11-29 07:37 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-11-29 07:37:06 PST
Created
attachment 445278
[details]
Patch
EWS
Comment 2
2021-11-29 10:43:35 PST
Committed
r286226
(
244607@main
): <
https://commits.webkit.org/244607@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445278
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-11-29 10:44:25 PST
<
rdar://problem/85824697
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug