[:has() pseudo-class] id invalidation support https://bugs.webkit.org/show_bug.cgi?id=233557

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/selectors/invalidation/attribute-or-elemental-selectors-in-has-expected.txt:

Source/WebCore:

The existing invalidation code doesn't automatically cover id mutations for has since it doesn't use rulesets
(because id mutations are rare and have not been worth optimizing).

* style/ChildChangeInvalidation.cpp:
(WebCore::Style::ChildChangeInvalidation::invalidateForChangedElement):

Invalidate for ids.
Only look for descendant matching :has rulesets for non-children.

* style/IdChangeInvalidation.cpp:
(WebCore::Style::IdChangeInvalidation::invalidateStyle):

Invalidate with RuleSets.

* style/RuleFeature.cpp:
(WebCore::Style::RuleFeatureSet::recursivelyCollectFeaturesFromSelector):

Collect ids for building rulesets for :has case only, similar to tags.

(WebCore::Style::RuleFeatureSet::collectFeatures):
(WebCore::Style::RuleFeatureSet::add):

Use some lambdas to reduce copy code.

(WebCore::Style::RuleFeatureSet::clear):
(WebCore::Style::RuleFeatureSet::shrinkToFit):
* style/RuleFeature.h:
* style/StyleScopeRuleSets.cpp:
(WebCore::Style::ScopeRuleSets::idInvalidationRuleSets const):
* style/StyleScopeRuleSets.h:



Canonical link: https://commits.webkit.org/244607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286226 268f45cc-cd09-0410-ab3c-d52691b4dbfc